adds passive interface to ospf

--- a/netbox_routing/templates/netbox_routing/ospfinterface.html
+++ b/netbox_routing/templates/netbox_routing/ospfinterface.html
@@ -41,6 +41,12 @@
               {{ object.bfd|placeholder }}
             </td>
           </tr>
+          <tr></tr>
+            <th scope="row">Passive</th>
+            <td>
+              {{ object.passive|placeholder }}
+            </td>
+          </tr>
           <tr>
             <th scope="row">Priority</th>
             <td>
